[package]
name = "command-line-grep-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
assert_cmd = "2.0.13"
assert_fs = "1.1.1"
clap = { version = "4.4.16", features = ["derive"] }
predicates = "3.1.0"
